# mikor

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure  configure.ac
doxygen/: Doxyfile  mainpage.dox
src/: CheckOptimalA.cpp  CheckOptimalC.cpp  D121.for  DebugOptimalA.cpp  ExternalFCN.cpp  ExternalFCN.h  FindOptimalA.cpp  FindOptimalC.cpp  FunctionTest1.cpp  FunctionTest2.cpp  FunctionTest3.cpp  GenericFCN.h  Makefile.am  Mikor.cpp  Mikor.h  Mikor2.cpp  Mikor2.h  MikorD.cpp  Test1.cpp  Test2.cpp  Test3.cpp  main.cpp
