## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = Mikor \
	Test1 \
	Test2 \
	Test3 \
	FindOptimalA

Mikor_SOURCES =  \
	main.cpp

Mikor_LDFLAGS = 

Mikor_LDADD = 

Test1_SOURCES =  \
	Test1.cpp

Test2_SOURCES =  \
	Test2.cpp

Test3_SOURCES =  \
	Test3.cpp

FindOptimalA_SOURCES =  \
	FindOptimalA.cpp

